# python-rivers-of-reckoning

./: .eslintrc.cjs  .gitignore  AGENTS.md  CLAUDE.md  GAME_BIBLE.md  GAME_IDENTITY.md  MIGRATION_SUMMARY.md  PR_ASSESSMENT.md  README.md  STRATA_VS_PYGAME.md  capacitor.config.ts  eslint.config.js  index.html  main.py  main_web.py  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  render.yaml  test_game_integration.py  test_game_logic.py  tox.ini  vite.config.ts
.cursor/: Dockerfile
.cursor/rules/: 00-fundamentals.mdc  ci.mdc  python.mdc  typescript.mdc
.github/: copilot-instructions.md
.github/workflows/: asset-compilation.yml  claude-code.yml  codeql.yml  dependency-update.yml  docs.yml  nodejs-app.yml  pr-review.yml  project-sync.yml  python-app.yml  release.yml  test.yml  web-deployment.yml
docs/: index.rst
docs/getting-started/: installation.rst
playwright-report/: index.html
python-archive/: .github-workflows-python-app.yml
python-archive/docs/: conf.py  user_manual.rst
python-archive/src/first_python_rpg/: boss.py  player.py  shop.py  world_gen.py
python-archive/tests/: test_game_integration.py  test_game_logic.py  test_library_structure.py  test_sprite_generation.py
rivers-of-reckoning-strata/: .gitignore  README.md  package.json  playwright.config.ts
rivers-of-reckoning-strata/public/: index.html
rivers-of-reckoning-strata/src/: App.tsx
src/: App.tsx
src/components/: Combat.tsx  Enemy.tsx  GameHUD.tsx  GameOverScreen.tsx  PauseMenu.tsx  Player.tsx  TitleScreen.tsx  VirtualJoystick.tsx  index.ts
src/constants/: game.ts
src/events/: combatEvents.ts  index.ts
src/features/: QuestSystem.ts  RandomEvents.ts  SoundManager.ts  eventSystem.ts  questSystem.ts
src/first_python_rpg/: cli.py  engine.py  game.py  map.py  procedural_enemies.py  systems.py
src/rivers_of_reckoning/: __init__.py  assets.py  boss.py  cli.py  enemy.py  engine.py  game.py  map.py  map_data.py  player.py  shop.py  systems.py  world_gen.py
src/store/: gameStore.test.ts  gameStore.ts
src/types/: game.ts
src/utils/: audioManager.ts  terrain.test.ts  terrain.ts
test-results/: .last-run.json
tests/: README.md  comprehensive.spec.ts  game.spec.ts  new-features.spec.ts  test_e2e.py  test_game_integration.py  test_game_logic.py  test_library_structure.py  test_sprite_generation.py
