[tool.poetry]
name = "first-python-rpg"
version = "0.3.0"
description = "A Python RPG game built with Pyxel, featuring procedural generation and modern game mechanics."
authors = ["Your Name <you@example.com>"]
packages = [{include = "first_python_rpg", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame-ce = "^2.0.0"
pygbag = "^0.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
tox = "^4.0.0"
tox-gh-actions = "^3.0.0"
black = "^24.0.0"
flake8 = "^7.3.0"
sphinx = "^9.0.4"
sphinx-rtd-theme = "^3.0.2"

[tool.poetry.scripts]
first-python-rpg = "first_python_rpg.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
