[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rivers-of-reckoning"
version = "0.5.0"
description = "Rivers of Reckoning - A fully procedural roguelike RPG with infinite world generation, ECS architecture, dynamic biomes, and web deployment via pygbag."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = {text = "MIT"}
authors = [
    { name = "Jon Bogaty", email = "jon@jonbogaty.com" }
]
keywords = ["game", "rpg", "roguelike", "procedural", "pygame", "pygbag", "ecs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Environment :: Web Environment",
]
dependencies = [
    "pygame-ce>=2.5.0,<3.0.0",
    "esper>=3.2,<4.0",
    "opensimplex>=0.4.5,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-playwright>=0.7.0",
    "pytest-base-url>=2.1.0",
    "black>=24.0.0",
    "flake8>=7.3.0",
    "tox>=4.0",
    "tox-uv>=1.0",
    "tox-gh-actions>=3.0",
]
docs = [
    "sphinx>=7.0.0,<9.0.0",
    "sphinx-rtd-theme>=2.0.0,<4.0.0",
]
web = [
    "pygbag>=0.9.2,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/arcade-cabinet/rivers-of-reckoning"
Documentation = "https://arcade-cabinet.github.io/rivers-of-reckoning"
Repository = "https://github.com/arcade-cabinet/rivers-of-reckoning"
"Bug Tracker" = "https://github.com/arcade-cabinet/rivers-of-reckoning/issues"

[project.scripts]
rivers-of-reckoning = "rivers_of_reckoning.cli:main"

[tool.hatch]
version.path = "src/rivers_of_reckoning/__init__.py"

[tool.hatch.build]
include = [
    "/src",
    "/images",
    "/music",
    "/main.py",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rivers_of_reckoning"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/images",
    "/music",
    "/main.py",
    "/tests",
    "/docs",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.envs.default]
installer = "uv"
dependencies = [
    "pytest>=9.0.2",
    "black>=24.0.0",
    "flake8>=7.3.0",
]

[tool.hatch.envs.test]
dependencies = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
]

[tool.hatch.envs.test.scripts]
run = "pytest {args:tests/}"
cov = "pytest --cov=src/rivers_of_reckoning --cov-report=html --cov-report=term {args:tests/}"

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "black>=24.0.0",
    "flake8>=7.3.0",
]

[tool.hatch.envs.lint.scripts]
check = [
    "black --check src/ tests/ main.py",
    "flake8 src/ tests/ main.py --max-line-length=127",
]
format = "black src/ tests/ main.py"

[tool.hatch.envs.docs]
dependencies = [
    "sphinx>=7.0.0,<9.0.0",
    "sphinx-rtd-theme>=2.0.0,<4.0.0",
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html docs docs/_build/html"
serve = "python -m http.server --directory docs/_build/html 8000"

# UV-specific configuration
[tool.uv]

[tool.uv.sources]

# Dependency groups for uv
[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-playwright>=0.7.0",
    "black>=24.0.0",
    "flake8>=7.3.0",
    "tox>=4.0",
    "tox-uv>=1.0",
    "tox-gh-actions>=3.0",
]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: end-to-end tests requiring playwright",
]

# Black code formatter
[tool.black]
line-length = 127
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# Ruff configuration (modern linter and formatter)
[tool.ruff]
line-length = 127
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
# E203: Whitespace before ':' (handled by formatter)
# W503 is deprecated and not in ruff
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F841"]
"src/rivers_of_reckoning/map_data.py" = ["E722"]

# Coverage configuration
[tool.coverage.run]
source = ["src/rivers_of_reckoning"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
